产品介绍第三次修改

--- a/xunta-web/src/main/webapp/client_code/product_page/product_page.html
+++ b/xunta-web/src/main/webapp/client_code/product_page/product_page.html
@@ -56,18 +56,25 @@
 			<div id="goback" onclick="backBtn()"><img src="../image/goback6.png" /></div>
 		</div>
 		<div id="content" style="position: absolute;top: 50px;overflow-x: hidden;height: 811px;width: 100%;">
-			<!-- <div style="
-    				background-color: #C6DBC9;
-   	 				height: 40px;
-    				margin: 5px 5px 5px 5px;
+			<div style="
     				width: 100%;
     				float: left;
-    				line-height: 40px;
     				text-align: center;
-    				font-weight: bold;
-			">xunta是什么？</div> -->
+    				background:url('../image/productTextBg.png');
+    				color: white;
+    				margin: 5px 5px 0px 5px;
+    				height: 40%;
+    				line-height: 40px;
+    				padding-top: 103px;
+			">
+			<div>这里不是论坛、不是社区</div>
+			<div>而是一种你前所未见的形式</div>
+			<div>专为特别的你设计，无论你处在什么水平，添加自己的关注点</div>
+			<div>总能找到和你相配的Ta</div>
+			<div>一起交流，学习，约伴...</div>
+			</div> 
 			<!-- <img alt="" src="../image/productPageImg1.png" style="width: 100%;margin: 5px 5px 5px 5px;"> -->
-			<img alt="" src="../image/productPageImg2.png" style="width: 100%;margin: 5px 5px 5px 5px;">
+			<img alt="" src="../image/productPageImg2.png" style="width: 100%;margin: 0px 5px 5px 5px;">
 			<img alt="" src="../image/productPageImg3.png" style="width: 100%;margin: 5px 5px 5px 5px;">
 			<img alt="" src="../image/productPageImg4.png" style="width: 100%;margin: 5px 5px 5px 5px;">
 			<img alt="" src="../image/productPageImg5.png" style="width: 100%;margin: 5px 5px 5px 5px;">
