产品介绍页面第四次修改

--- a/xunta-web/src/main/webapp/client_code/product_page/product_page.html
+++ b/xunta-web/src/main/webapp/client_code/product_page/product_page.html
@@ -44,8 +44,9 @@
     			width: 100%;
     			line-height: 32px;
     			margin-top: 12px;
-    			font-size: 18px;
+    			//font-size: 18px;
     			z-index: 13;
+    			font-size:1em;
     		}
 			
         </style>
@@ -63,13 +64,15 @@
     				background:url('../image/productTextBg.png');
     				color: white;
     				margin: 5px 5px 0px 5px;
-    				height: 40%;
+    				height: 60%;
     				line-height: 40px;
-    				padding-top: 103px;
+    				padding-top: 10%;
+    				font-size:1em;
 			">
 			<div>这里不是论坛、不是社区</div>
 			<div>而是一种你前所未见的形式</div>
-			<div>专为特别的你设计，无论你处在什么水平，添加自己的关注点</div>
+			<div>专为特别的你设计，无论你处在什么水平</div>
+			<div>添加自己的关注点</div>
 			<div>总能找到和你相配的Ta</div>
 			<div>一起交流，学习，约伴...</div>
 			</div> 
