为了和微博推广一致，更改了index页面

--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -32,7 +32,11 @@
 		</div>
 		
 		<div id="welcomepicture_container" style="display:none">
-            <img id="welcome2" src="image/welcome2.png" />
+            <img id="welcome2" src="image/welcome2.png">
+			<img id="welcome2" src="image/welcome_salsa1.png">
+			<img id="welcome2" src="image/welcome_salsa2.png" style="
+    			margin-top: 10%;
+			">
 		</div>
 		
         <div id="mobilephone-login-container" style="display:none;">
