完整修改http变成https链接问题，并且请求网页通过，但是服务器显示的请求并不是https，而是http

--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -287,7 +287,7 @@
 			//pageparam = JSON.stringify(pageparam);
 			//pageparam = JSON.parse(pageparam);
 			//pageparam = JSON.parse(pageparam);
-			openNewWin('main_page', 'main_page/main_page.html', JSON.stringify(pageparam));//index.html暂时没移动
+			openNewWin('main_page', preUrl+'/xunta-web/client_code/main_page/main_page.html', JSON.stringify(pageparam));//index.html暂时没移动
 			//openWin('topics_page', 'topics_page/topics_page.html', pageparam);//index.html暂时没移动
 				//1.11 新增 F
 				//hideIndexLogInfo();
