引导页修改

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -69,8 +69,7 @@
     			<div class="mu" id="mutemp14" style="/* left: 313px; */width: 19px;height: 19px;/* top: 5px; */"></div>
     			<div class="mu" id="mutemp15" style="/* left: 296px; */width: 18px;height: 18px;/* top: 2px; */"></div>
     			 -->
-    			<!-- 引导页：这是匹配人头像引导话 -->
-    			<img src="../image/guideMUBubble.png" id="guideMUBubble" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'" style="/* margin-top: 161px; */width: 65%;display: inline-block;position: absolute;right:0px;display:none;">
+    			
 			</div>
 
 			<!-- 我的标签 -->
@@ -171,6 +170,8 @@
             </tr>
         </table>
     </div>
+    <!-- 引导页：这是匹配人头像引导话 -->
+    			<img src="../image/guideMUBubble.png" id="guideMUBubble" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'" style="z-index:202;width: 65%;display: inline-block;position: absolute;right:0px;display:none;">
 </body>
 	<!-- <script type="text/javascript" src="../script/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="../script/jquery.nicescroll.min.js"></script>
