1.群聊返回  2.群聊出现复选框

--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
@@ -141,7 +141,7 @@
 		loadCss(preUrl+"/xunta-web/client_code/css/popup.css");
 		//将需要的js文件变成js代码生成
 		loadJs(preUrl+"/xunta-web/client_code/script/jquery-1.11.3.min.js");
-		loadJs(preUrl+"/xunta-web/client_code/script/jquery.nicescroll.min.js");
+		//loadJs(preUrl+"/xunta-web/client_code/script/jquery.nicescroll.min.js");
 		loadJs(preUrl+"/xunta-web/client_code/script/common-xunta.js");
 		loadJs(preUrl+"/xunta-web/client_code/script/common-xunta_web.js");
 		loadJs(preUrl+"/xunta-web/client_code/script/popup.js");
