--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -121,7 +121,7 @@
 		//2018.02.01 叶夷   window.location.protocal  获取用户请求所用的协议，然后判断如果是http 就跳转到https 如果是https 就啥都不用做
 		var tmpTag = 'https:' == document.location.protocol ? false : true;
 		if(tmpTag){//说明这次域名是http，进行重定向跳转
-			window.location.href="https://"+www.xunta.so";
+			window.location.href="https://www.xunta.so";
 		}
 
 		//2018.02.07 叶夷     静态资源的路径动态的创建
