1.公司介绍等页面放在首页   2.引导显示出来发送接口给后台

--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -298,6 +298,7 @@
 				//1.11 新增 F
 				//hideIndexLogInfo();
 				$("#loadinganimation").hide();
+				//console.log("小车图片隐藏的时间："+new Date());
 				//?0110 这句移到调用处.
 			browserOnlineOfflineEvent();
       }
