修改引导页的气泡图片

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -42,7 +42,7 @@
 						<div id="showonlineoffline" style="display:none;">
 							<img src="../image/dot-gray.png" onclick="wsConnect()" />
 						</div>
-						<img onclick="updUserImg()" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'/>
+						<img onclick="updUserImg()" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'"/>
 						<div id="username" onclick="alterNickname()"></div>
 					
 					</div>
