在聊天页面的第一句话聊天框处显示关注微信二维码

--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -120,7 +120,8 @@
 	<script type="text/javascript">
 		//2018.02.01 叶夷   window.location.protocal  获取用户请求所用的协议，然后判断如果是http 就跳转到https 如果是https 就啥都不用做
 		var tmpTag = 'https:' == document.location.protocol ? false : true;
-		if(tmpTag){//说明这次域名是http，进行重定向跳转
+		var tmpUrl='www.xunta.so' == document.domain ? true : false;
+		if(tmpTag && tmpUrl){//说明这次域名是http且是xunta.so的域名，进行重定向跳转
 			window.location.href="https://www.xunta.so";
 		}
 
