微信二维码功能修改bug

--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -190,7 +190,7 @@
             //chat.init(userId,recevier);//注册用户，及用记接收消息的函数
             
           	//2017.08.30 叶夷  请求共同选择的标签
-		  	requestSelectCP();//放在这里是为了测试
+		  	//requestSelectCP();//放在这里是为了测试
         }
         
         //data转换为字符串
