为了和发宝哥的发送消息接口一致，在接收的json里面handle是前端传送的msgid,chatmsg_id是真正的数据库id

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -317,7 +317,7 @@
         	showMsg(data);
         	
         	//在这里发送收到消息接口
-        	var msg_id=data.handler;
+        	var msg_id=data.chatmsg_id;
         	var target_topicid=data.window_id;
         	var paraStr =msg_id+ "','"+target_topicid;
 			execRoot("sendmsg_received_confirm('" + paraStr + "')");
