1.在发消息的时候判断话题是否过期，过期则在发送的消息旁边显示提示  2.在打开话题页的时候判断话题是否过期，过期则在发送toast提示   3.请求群聊话题列表的时候，将失效且没接受的话题排除

--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -189,9 +189,8 @@
 			//这里没几句,暂时移到了上面.方法暂时注销.prepareDialogPage();//
             execRoot("setCurrentPageId('"+toUserId+"')");
             //console.log("preparePageVars userImage="+userImage);
-            if(isTopic==true || isTopic=="true"){//话题聊天页发送消息是不同的方法
-            	create_datetime_long=new Date().getTime();
-            	requestHistoryMsg();
+            if(isTopic==true || isTopic=="true"){//是群聊话题页的话题先判断话题是否失效
+            	requestIfTopicOutTime();
             }else{
             	getHistoryMsg(userId,toUserId,firstMsgId);
             }
