1.将一些log更改为debug 2.更改失效时间

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -381,7 +381,7 @@
             		
             		//如果是群聊话题的消息的话user变成topic_name
             		var topic_name=obj.topic_name;
-        			if(topic_name!="undefined" || topic_name!=undefined){
+        			if(topic_name!="undefined" && topic_name!=undefined){
         				user=topic_name;
         				window_id=obj.window_id;
         				respondeUserId=window_id;
