--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -75,7 +75,7 @@
 			<!-- 我的标签 -->
 			<div class="mytag-container" id="mytag-container">
 			<!--<img id="background-rightbar-mytag" src="../image/background1-rightbar.jpg">用来覆盖右边的滚动条 -->
-				<div  class="mytag" id="addtag" onclick='addTag()'>
+				<div  class="mytag" id="addtag" onclick="addTag()">
 					<!-- img src="../image/plus3.jpg"-->
 				</div>
 				<!-- <div class="mytag"><img src="../image/acclaim-50x173.png"><span>阿斯蒂芬8后</span></div> -->
@@ -171,7 +171,7 @@
         </table>
     </div>
     <!-- 引导页：这是匹配人头像引导话 -->
-    <img src="../image/guideMUBubble.png" id="guideMUBubble" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'" style="z-index:202;width: 60%;display: inline-block;position: absolute;right:0px;display:none;">
+    <img src="../image/guideMUBubble.png" id="guideMUBubble" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'" style="width: 60%;display: inline-block;position: absolute;right:0px;display:none;">
     <!-- 关于公司信息 -->
     <div class="footer" style="position: absolute;top: 97%;color:#666666;font-size: 12px;text-align: center;width: 100%;">
 			<a style="margin-right: 10px;text-decoration: underline;cursor: pointer;" onclick="enterProfilePage()">关于我们</a>
@@ -271,7 +271,9 @@
 			setMatchUsersContainerSize();
 			
 			//2018.03.08  叶夷    通过请求请求服务器判断是否出现引导页
-			ifUserInited(userId);
+			//ifUserInited(userId);
+			//2018.04.13  叶夷  先请求推荐标签
+			requestCP(userId,requestCPNum,++currentRequestedCPPage);
 			
 			//2017.08.23 叶夷   各个控件根据屏幕调整
 			showMatchedUsers();
