1.引导页的气泡z-index=200；

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -171,7 +171,7 @@
         </table>
     </div>
     <!-- 引导页：这是匹配人头像引导话 -->
-    <img src="../image/guideMUBubble.png" id="guideMUBubble" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'" style="width: 60%;display: inline-block;position: absolute;right:0px;display:none;">
+    <img src="../image/guideMUBubble.png" id="guideMUBubble" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'" style="width: 60%;display: inline-block;position: absolute;right:0px;display:none;z-index:202;">
     <!-- 关于公司信息 -->
     <div class="footer" style="position: absolute;top: 97%;color:#666666;font-size: 12px;text-align: center;width: 100%;">
 			<a style="margin-right: 10px;text-decoration: underline;cursor: pointer;" onclick="enterProfilePage()">关于我们</a>
