--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.html
@@ -38,7 +38,7 @@
 								<span id="titleText" style="line-height:48px;">通过关注点筛选</span>
 								<div id="groupChat" class="groupChat">
 									<img id='groupChatAdd' class="groupChatAdd" src="../image/groupChatAdd.png">
-									<input id='inputGroupChat' class='inputGroupChat' value='群话题' disabled="disabled" onfocus="if(this.value=='发起限时群话题...') {this.value=''}" onblur="if(this.value=='') {this.value='发起限时群话题...'}" autofocus="autofocus">
+									<input id='inputGroupChat' class='inputGroupChat' value='群话题' disabled="disabled" onfocus="if(this.value=='输入群聊标题...') {this.value=''}" onblur="if(this.value=='') {this.value='输入群聊标题...'}" autofocus="autofocus">
 									<!-- <div id="groupChatText" style="float: right;height: 100%;margin-right:15px;">发起群聊话题...</div> -->
 								</div>
 							</div>
