将new200个websocket再选择同一个cpid的测试按钮显示

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -137,13 +137,13 @@
 		</div>
 
 		<!-- 选中标签并发websocket测试按钮 -->
-		<!-- <div onclick="requestUserIds()" style="position: absolute;top: 26px;left: 100px;background: #f1f1f1;z-index:999;">
+		<div onclick="requestUserIds()" style="position: absolute;top: 26px;left: 100px;background: #f1f1f1;z-index:999;">
 			并发测试按钮 
-		</div> -->
-		<!-- 选中标签性能测试停止按钮
+		</div> 
+		<!-- 选中标签性能测试停止按钮-->
 		<div onclick="cleartimeout()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;">
 			选中标签测试停止
-		</div>-->
+		</div>
 		<!-- 进入匹配人详情页按钮
 		<div onclick="enterMatchUsersPage()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;z-index:999;">
 			进入匹配人详情页按钮
