测试代码完善

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -143,7 +143,7 @@
 			并发测试按钮 
 		</div> 
 		<!-- 选中标签性能测试停止按钮-->
-		<div onclick="cleartimeout()" id="stopTestSelectCp" style="position: absolute;top: 78px;left: 100px;background: #f1f1f1;display:none;">
+		<div onclick="cleartimeout()" id="stopTestSelectCp" style="position: absolute;top: 78px;left: 100px;background: #f1f1f1;z-index:999;display:none;">
 			选中标签测试停止
 		</div>
 		<!-- 进入匹配人详情页按钮
