--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -135,23 +135,25 @@
 		<div class="enterdialogList" id="enterdialogList" onclick="enterMatchUsersPage()" style="display:none;">
 			<img src="../image/new-msg-3.png" />
 		</div>
-
-		<!-- 选中标签并发websocket测试按钮 -->
-		<div onclick="requestUserIds()" id="startTestSelectCp" style="position: absolute;top: 72px;left: 100px;background: #f1f1f1;z-index:999;display:none;">
-			并发测试按钮 
-		</div> 
-		<!-- 选中标签性能测试停止按钮-->
-		<div onclick="cleartimeout()" id="stopTestSelectCp" style="position: absolute;top: 98px;left: 100px;background: #f1f1f1;z-index:999;display:none;">
-			选中标签测试停止
-		</div>
 		
+		<!-- start:选中标签并发websocket测试按钮 -->
+		<input type="text" value="请输入创建的websocket个数最大上限" onfocus="if(this.value=='请输入创建的websocket个数最大上限') {this.value=''}" onblur="if(this.value=='') {this.value='请输入创建的websocket个数最大上限'}" id="websoketCount" 
+			style="position: absolute;top: 0px;left: 100px;background: #f1f1f1;z-index:498;">
+			
 		<input type="text" value="请输入选择cp的时间" onfocus="if(this.value=='请输入选择cp的时间') {this.value=''}" onblur="if(this.value=='') {this.value='请输入选择cp的时间'}" id="testWebsocketSelectTime" 
-			style="position: absolute;top: 6px;left: 100px;background: #f1f1f1;z-index:999;"><span style="position: absolute;top: 6px;left: 273px;background: #f1f1f1;z-index:999;">提示：时间格式为hh:mm:ss(如13:04:06)</span>
-		<div onclick="requestUserIds2()" id="startTestSelectCp2" style="position: absolute;top: 30px;left:100px;background: #f1f1f1;z-index:999;display:none;">
+			style="position: absolute;top: 30px;left: 100px;background: #f1f1f1;z-index:498;">
+			<span style="position: absolute;top: 30px;left: 273px;background: #f1f1f1;z-index:498;">提示：时间格式为hh:mm:ss(如13:04:06)</span>
+		<div onclick="requestUserIds2()" id="startTestSelectCp2" style="position: absolute;top: 53px;left:100px;background: #f1f1f1;z-index:498;display:none;">
 			开始测试按钮
 		</div> 
-		<!--  <input type="text" value="请输入cptext" onfocus="if(this.value=='请输入cptext') {this.value=''}" onblur="if(this.value=='') {this.value='请输入cptext'}" id="testNewWebsocketSelectCpText" 
-			style="position: absolute;top: 26px;left: 300px;background: #f1f1f1;z-index:999;">-->
+		
+		<div onclick="requestUserIds()" id="startTestSelectCp" style="position: absolute;top: 100px;left: 100px;background: #f1f1f1;z-index:498;display:none;">
+			并发测试按钮 
+		</div> 
+		<div onclick="cleartimeout()" id="stopTestSelectCp" style="position: absolute;top: 123px;left: 100px;background: #f1f1f1;z-index:498;display:none;">
+			选中标签测试停止
+		</div>
+		<!-- end:选中标签并发websocket测试按钮 -->
 		
 		<!-- 进入匹配人详情页按钮
 		<div onclick="enterMatchUsersPage()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;z-index:999;">
