将测试数据的选择标签id和text变为手动输入，保证多浏览器选择的标签相同

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -138,7 +138,11 @@
 		
 		<!-- start:选中标签并发websocket测试按钮 -->
 		<input type="text" value="请输入创建的websocket个数最大上限" onfocus="if(this.value=='请输入创建的websocket个数最大上限') {this.value=''}" onblur="if(this.value=='') {this.value='请输入创建的websocket个数最大上限'}" id="websoketCount" 
-			style="position: absolute;top: 0px;left: 100px;background: #f1f1f1;z-index:498;">
+			style="position: absolute;top: 0px;left: 0px;background: #f1f1f1;z-index:498;">
+		<input type="text" value="请输入cpid" onfocus="if(this.value=='请输入cpid') {this.value=''}" onblur="if(this.value=='') {this.value='请输入cpid'}" id="testSelectCpid" 
+			style="position: absolute;top: 0px;left: 181px;background: #f1f1f1;z-index:498;">
+		<input type="text" value="请输入cpText" onfocus="if(this.value=='请输入cpText') {this.value=''}" onblur="if(this.value=='') {this.value='请输入cpText'}" id="testSelectCpText" 
+			style="position: absolute;top: 0px;left: 360px;background: #f1f1f1;z-index:498;">
 			
 		<input type="text" value="请输入选择cp的时间" onfocus="if(this.value=='请输入选择cp的时间') {this.value=''}" onblur="if(this.value=='') {this.value='请输入选择cp的时间'}" id="testWebsocketSelectTime" 
 			style="position: absolute;top: 30px;left: 100px;background: #f1f1f1;z-index:498;">
