--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -136,16 +136,14 @@
 			<img src="../image/new-msg-3.png" />
 		</div>
 
-		<!--  <input type="text" value="请输入cpid" onfocus="if(this.value=='请输入cpid') {this.value=''}" onblur="if(this.value=='') {this.value='请输入cpid'}" id="testNewWebsocketSelectCpId" style="position: absolute;top: 26px;left: 100px;background: #f1f1f1;z-index:999;">
-		<input type="text" value="请输入cptext" onfocus="if(this.value=='请输入cptext') {this.value=''}" onblur="if(this.value=='') {this.value='请输入cptext'}" id="testNewWebsocketSelectCpText" style="position: absolute;top: 26px;left: 300px;background: #f1f1f1;z-index:999;">-->
 		<!-- 选中标签并发websocket测试按钮 -->
-		<div onclick="requestUserIds()" id="startTestSelectCp" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;z-index:999;display:none;">
+		<!-- <div onclick="requestUserIds()" style="position: absolute;top: 26px;left: 100px;background: #f1f1f1;z-index:999;">
 			并发测试按钮 
-		</div> 
-		<!-- 选中标签性能测试停止按钮-->
-		<div onclick="cleartimeout()" id="stopTestSelectCp" style="position: absolute;top: 78px;left: 100px;background: #f1f1f1;z-index:999;display:none;">
+		</div> -->
+		<!-- 选中标签性能测试停止按钮
+		<div onclick="cleartimeout()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;">
 			选中标签测试停止
-		</div>
+		</div>-->
 		<!-- 进入匹配人详情页按钮
 		<div onclick="enterMatchUsersPage()" style="position: absolute;top: 52px;left: 100px;background: #f1f1f1;z-index:999;">
 			进入匹配人详情页按钮
