打开聊天页后什么都不显示,后退时显示二维码

--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -25,7 +25,7 @@
 			<span id="title">
 			(昵称怎以没有读取到呢?)
 			</span>
-<div id="goback" onclick="backBtn()"><img src="../image/goback6.png" /></div>
+<div id="goback" onclick="backBtnIfShowTwoBarCode()"><img src="../image/goback6.png" /></div>
 				
 		</div>
 		
