--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -95,9 +95,9 @@
 		
 		
 		<div class="footer" style="position: absolute;top: 97%;color:#999;font-size: 12px;text-align: center;width: 100%;">
-			<a style="margin-right: 10px;text-decoration: underline;cursor: pointer;" onclick="enterProfilePage()">关于我们</a>
-			<a style="margin-right: 10px;text-decoration: underline;cursor: pointer;" onclick="enterProductPage()">产品介绍</a>
-			沪ICP备13012815号-1
+			<!-- <a style="margin-right: 10px;text-decoration: underline;cursor: pointer;" onclick="enterProfilePage()">关于我们</a>
+			<a style="margin-right: 10px;text-decoration: underline;cursor: pointer;" onclick="enterProductPage()">产品介绍</a> -->
+			<a style="margin-right: 10px;text-decoration: underline;cursor: pointer;" href="http://www.beian.miit.gov.cn/">沪ICP备13012815号-1</a>
 		</div>
 		
 	</body>
