--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -137,7 +137,7 @@
 		</div>
 		
 		<!-- start:选中标签并发websocket测试按钮 -->
-		<input type="text" value="请输入创建的websocket个数最大上限" onfocus="if(this.value=='请输入创建的websocket个数最大上限') {this.value=''}" onblur="if(this.value=='') {this.value='请输入创建的websocket个数最大上限'}" id="websoketCount" 
+		<!-- <input type="text" value="请输入创建的websocket个数最大上限" onfocus="if(this.value=='请输入创建的websocket个数最大上限') {this.value=''}" onblur="if(this.value=='') {this.value='请输入创建的websocket个数最大上限'}" id="websoketCount" 
 			style="position: absolute;top: 0px;left: 0px;background: #f1f1f1;z-index:498;">
 		<input type="text" value="请输入cpid" onfocus="if(this.value=='请输入cpid') {this.value=''}" onblur="if(this.value=='') {this.value='请输入cpid'}" id="testSelectCpid" 
 			style="position: absolute;top: 0px;left: 181px;background: #f1f1f1;z-index:498;">
@@ -156,7 +156,7 @@
 		</div> 
 		<div onclick="cleartimeout()" id="stopTestSelectCp" style="position: absolute;top: 123px;left: 100px;background: #f1f1f1;z-index:498;display:none;">
 			选中标签测试停止
-		</div>
+		</div> -->
 		<!-- end:选中标签并发websocket测试按钮 -->
 		
 		<!-- 进入匹配人详情页按钮
